--- a/src/app/features/dashboard/components/suggested-actions-widget/suggested-actions-widget.component.scss
+++ b/src/app/features/dashboard/components/suggested-actions-widget/suggested-actions-widget.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../../shared/ui-components/theme/variables' as *;
+@use '../../../../shared/ui-components/theme/variables' as *;
 
 .suggested-actions-widget {
   display: flex;
