--- a/src/app/features/dashboard/components/category-spending-widget/category-spending-widget.component.scss
+++ b/src/app/features/dashboard/components/category-spending-widget/category-spending-widget.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../../shared/ui-components/theme/variables' as *;
+@use '../../../../shared/ui-components/theme/variables' as *;
 
 .category-spending-widget {
   display: flex;
