--- a/src/app/features/dashboard/components/recent-achievements-widget/recent-achievements-widget.component.scss
+++ b/src/app/features/dashboard/components/recent-achievements-widget/recent-achievements-widget.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../../shared/ui-components/theme/variables' as *;
+@use '../../../../shared/ui-components/theme/variables' as *;
 
 .recent-achievements-widget {
   display: flex;
