--- a/src/app/shared/ui-components/molecules/envelope-card/envelope-card.component.scss
+++ b/src/app/shared/ui-components/molecules/envelope-card/envelope-card.component.scss
@@ -107,6 +107,8 @@
     gap: var(--os-spacing-xs);
     justify-content: flex-end;
     align-items: center;
+    padding-top: var(--os-spacing-sm);
+    margin-top: var(--os-spacing-sm);
   }
 
 }
