--- a/src/app/core/layout/app-layout.component.scss
+++ b/src/app/core/layout/app-layout.component.scss
@@ -3,6 +3,8 @@
   align-items: center;
   max-width: 300px;
   width: 100%;
+  border: none;
+  background: transparent;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 
   @media (max-width: 768px) {
